# CppLog

./: .gitignore  CMakeLists.txt  LICENSE  README.md  example.cpp  log.cpp  log.hpp  main.cpp
